versions/v2.9/modules/en/pages/cluster-deployment/cluster-deployment.adoc
= Kubernetes Clusters in {rancher-product-name} Setup
:page-languages: [en, zh]
:revdate: 2025-03-17
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/index.adoc 
:product-path: cluster-deployment/cluster-deployment.adoc
:description: Provisioning Kubernetes Clusters
ifeval::["{build-type}" != "community"]
:xref-launch-k8s-with-rancher: xref:cluster-deployment/launch-kubernetes-with-rancher.adoc
:xref-infra-providers: xref:cluster-deployment/infra-providers/infra-providers.adoc
:xref-register-clusters: xref:cluster-deployment/register-existing-clusters.adoc
:xref-custom-clusters: xref:cluster-deployment/custom-clusters/custom-clusters.adoc
:xref-hosted-k8s-clusters: xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
:xref-k8s-concepts: xref:about-rancher/concepts.adoc
:xref-rancher-architecture: xref:about-rancher/architecture/architecture.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-launch-k8s-with-rancher: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/index.adoc
:xref-infra-providers: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/index.adoc
:xref-register-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/register-existing-clusters.adoc
:xref-custom-clusters: xref:reference-guides/cluster-configuration/rancher-server-configuration/use-existing-nodes/index.adoc
:xref-hosted-k8s-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/index.adoc
:xref-k8s-concepts: xref:reference-guides/kubernetes-concepts.adoc
:xref-rancher-architecture: xref:reference-guides/rancher-manager-architecture/index.adoc
endif::[]

Rancher simplifies the creation of clusters by allowing you to create them through the Rancher UI rather than more complex alternatives. Rancher provides multiple options for launching a cluster. Use the option that best fits your use case.

This section assumes a basic familiarity with Docker and Kubernetes. For a brief explanation of how Kubernetes components work together, refer to the {xref-k8s-concepts}[concepts] page.

For a conceptual overview of how the Rancher server provisions clusters and what tools it uses to provision them, refer to the {xref-rancher-architecture}[architecture] page.

== Cluster Management Capabilities by Cluster Type

The following table summarizes the options and settings available for each cluster type:

include::shared:ROOT:partial$en/cluster-capabilities-table.adoc[]

== Setting up Clusters in a Hosted Kubernetes Provider

In this scenario, Rancher does not provision Kubernetes because it is installed by providers such as Google Kubernetes Engine (GKE), Amazon Elastic Container Service for Kubernetes, or Azure Kubernetes Service.

If you use a Kubernetes provider such as Google GKE, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.

For more information, refer to the section on {xref-hosted-k8s-clusters}[hosted Kubernetes clusters.]

== Launching Kubernetes with Rancher

Rancher uses the https://rancher.com/docs/rke/latest/en/[Rancher Kubernetes Engine (RKE)] as a library when provisioning Kubernetes on your own nodes. RKE is Rancher's own lightweight Kubernetes installer.

In RKE clusters, Rancher manages the deployment of Kubernetes. These clusters can be deployed on any bare metal server, cloud provider, or virtualization platform.

These nodes can be dynamically provisioned through Rancher's UI, which calls https://github.com/docker/docs/blob/vnext-engine/machine/overview.md[Docker Machine] to launch nodes on various cloud providers.

If you already have a node that you want to add to an RKE cluster, you can add it to the cluster by running a Rancher agent container on it.

For more information, refer to the section on {xref-launch-k8s-with-rancher}[RKE clusters.]

=== Launching Kubernetes and Provisioning Nodes in an Infrastructure Provider

Rancher can dynamically provision nodes in infrastructure providers such as Amazon EC2, DigitalOcean, Azure, or vSphere, then install Kubernetes on them.

Using Rancher, you can create pools of nodes based on a xref:./infra-providers/infra-providers.adoc#_node_templates[node template]. This template defines the parameters used to launch nodes in your cloud providers.

One benefit of using nodes hosted by an infrastructure provider is that if a node loses connectivity with the cluster, Rancher can automatically replace it, thus maintaining the expected cluster configuration.

The cloud providers available for creating a node template are decided based on the xref:./infra-providers/infra-providers.adoc#_node_drivers[node drivers] active in the Rancher UI.

For more information, refer to the section on {xref-infra-providers}[nodes hosted by an infrastructure provider]

=== Launching Kubernetes on Existing Custom Nodes

When setting up this type of cluster, Rancher installs Kubernetes on existing {xref-custom-clusters}[custom nodes,] which creates a custom cluster.

You can bring any nodes you want to Rancher and use them to create a cluster.

These nodes include on-prem bare metal servers, cloud-hosted virtual machines, or on-prem virtual machines.

== Registering Existing Clusters

The cluster registration feature replaces the feature to import clusters.

Registering EKS clusters now provides additional benefits. For the most part, registered EKS clusters and EKS clusters created in Rancher are treated the same way in the Rancher UI, except for deletion.

When you delete an EKS cluster that was created in Rancher, the cluster is destroyed. When you delete an EKS cluster that was registered in Rancher, it is disconnected from the Rancher server, but it still exists and you can still access it in the same way you did before it was registered in Rancher.

For more information, see {xref-register-clusters}[this page.]

== Programmatically Creating Clusters

The most common way to programmatically deploy Kubernetes clusters through Rancher is by using the Rancher2 Terraform provider. The documentation for creating clusters with Terraform is https://registry.terraform.io/providers/rancher/rancher2/latest/docs/resources/cluster[here.]

EKS, GKE, AKS clusters and RKE clusters can be created or imported with Terraform.
